docs/apache-airflow-providers-google/12.0.0/_sources/_api/tests/system/google/cloud/dataproc/example_dataproc_pyspark/index.rst.txt
:py:mod:`tests.system.google.cloud.dataproc.example_dataproc_pyspark`
=====================================================================

.. py:module:: tests.system.google.cloud.dataproc.example_dataproc_pyspark

.. autoapi-nested-parse::

   Example Airflow DAG for DataprocSubmitJobOperator with pyspark job.



Module Contents
---------------

.. py:data:: ENV_ID

   

.. py:data:: DAG_ID
   :value: 'dataproc_pyspark'

   

.. py:data:: PROJECT_ID

   

.. py:data:: CLUSTER_NAME_BASE

   

.. py:data:: CLUSTER_NAME_FULL

   

.. py:data:: CLUSTER_NAME

   

.. py:data:: BUCKET_NAME

   

.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'

   

.. py:data:: JOB_FILE
   :value: 'dataproc-pyspark-job-pi.py'

   

.. py:data:: GCS_JOB_FILE

   

.. py:data:: REGION
   :value: 'europe-west1'

   

.. py:data:: CLUSTER_CONFIG

   

.. py:data:: PYSPARK_JOB

   

.. py:data:: create_bucket

   

.. py:data:: test_run

   

