docs/apache-airflow-providers-google/14.1.0/_sources/_api/tests/system/google/cloud/dataproc/example_dataproc_pyspark/index.rst.txt
tests.system.google.cloud.dataproc.example_dataproc_pyspark
===========================================================

.. py:module:: tests.system.google.cloud.dataproc.example_dataproc_pyspark

.. autoapi-nested-parse::

   Example Airflow DAG for DataprocSubmitJobOperator with pyspark job.



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.dataproc.example_dataproc_pyspark.ENV_ID
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.DAG_ID
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.PROJECT_ID
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.CLUSTER_NAME_BASE
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.CLUSTER_NAME_FULL
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.CLUSTER_NAME
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.BUCKET_NAME
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.RESOURCE_DATA_BUCKET
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.JOB_FILE
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.GCS_JOB_FILE
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.REGION
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.CLUSTER_CONFIG
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.PYSPARK_JOB
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.create_bucket
   tests.system.google.cloud.dataproc.example_dataproc_pyspark.test_run


Module Contents
---------------

.. py:data:: ENV_ID

.. py:data:: DAG_ID
   :value: 'dataproc_pyspark'


.. py:data:: PROJECT_ID

.. py:data:: CLUSTER_NAME_BASE
   :value: ''


.. py:data:: CLUSTER_NAME_FULL
   :value: ''


.. py:data:: CLUSTER_NAME
   :value: ''


.. py:data:: BUCKET_NAME
   :value: 'bucket_dataproc_pyspark_Uninferable'


.. py:data:: RESOURCE_DATA_BUCKET
   :value: 'airflow-system-tests-resources'


.. py:data:: JOB_FILE
   :value: 'dataproc-pyspark-job-pi.py'


.. py:data:: GCS_JOB_FILE
   :value: 'gs://bucket_dataproc_pyspark_Uninferable/dataproc/dataproc-pyspark-job-pi.py'


.. py:data:: REGION
   :value: 'europe-west1'


.. py:data:: CLUSTER_CONFIG

.. py:data:: PYSPARK_JOB

.. py:data:: create_bucket

.. py:data:: test_run

